--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="grey">#878787</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    color
 </resources>
