--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="orange">@color/orange</item>
-        <item name="black">@color/black</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/white</item>
         <item name="android:textColorHint">@color/grey</item>
         <item name="android:fontFamily">@font/regular</item>
+
     </style>
 
     <style name="FirebaseLoginTheme" parent="FirebaseUI">
@@ -16,5 +13,10 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@drawable/com_facebook_button_icon</item>
+    </style>
+
+    <style name="PrimaryButton">
+    <item name="android:fontFamily">@font/bold</item>
+    <item name="android:textColor">@color/white</item>
     </style>
 </resources>
