--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
         android:inputType="textEmailAddress"
         android:paddingStart="45dp"
         android:text=""
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/edit_login_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -38,6 +39,7 @@
         android:inputType="textPassword"
         android:paddingStart="45dp"
         android:text=""
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/edit_login_email"
         app:layout_constraintStart_toStartOf="@+id/edit_login_email"
         app:layout_constraintTop_toBottomOf="@+id/edit_login_email" />
@@ -48,7 +50,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
-        android:background="@drawable/primary_button"
         android:text="@string/login_button_login"
         android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/edit_login_password"
@@ -63,7 +64,7 @@
         android:fontFamily="@font/regular"
         android:text="@string/forgot_password"
         android:textColor="@color/white"
-        android:theme="@style/P"
+        android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/login_button_login"
         app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="@+id/login_button_login"
@@ -74,9 +75,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="@+id/login_sign_up"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.404"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
@@ -85,9 +86,10 @@
         android:id="@+id/google_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.541"
+        app:layout_constraintHorizontal_bias="0.778"
         app:layout_constraintStart_toEndOf="@+id/facebook_button"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
@@ -106,7 +108,7 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="126dp"
-        android:layout_height="128.47"
+        android:layout_height="128.47dp"
         android:layout_marginTop="86dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,6 +135,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_sign_up"
         app:srcCompat="@drawable/or" />
+
+    <TextView
+        android:id="@+id/login_sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="144dp"
+        android:text="Sing In"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/login_button_login"
+        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
