--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,44 +7,46 @@ android:layout_height="match_parent"
 android:background="@android:color/holo_blue_light"
 tools:ignore="ExtraText">
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="144dp"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="68dp"
+        android:text="Marketplace"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:text="My Decks"
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.413"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-
-<Button
-    android:id="@+id/login_button_login"
-    android:layout_width="0dp"
-    android:layout_height="50dp"
-    android:layout_marginTop="32dp"
-    android:background="@android:color/holo_red_light"
-    android:text="@string/login_button_login"
-    app:layout_constraintEnd_toEndOf="@+id/edit_login_password"
-    app:layout_constraintStart_toStartOf="@+id/edit_login_password"
-    app:layout_constraintTop_toBottomOf="@+id/edit_login_password" />
-
-<TextView
-    android:id="@+id/login_sign_up"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="44dp"
-    android:text="@string/new_sign_up"
-    android:textColor="@android:color/background_dark"
-    android:textSize="18sp"
-    app:layout_constraintEnd_toEndOf="@+id/login_button_login"
-    app:layout_constraintHorizontal_bias="0.457"
-    app:layout_constraintStart_toStartOf="@+id/login_button_login"
-    app:layout_constraintTop_toBottomOf="@+id/login_button_login" />
-
-<com.facebook.login.widget.LoginButton
-    android:id="@+id/facebook_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="64dp"
-    app:layout_constraintEnd_toEndOf="@+id/login_sign_up"
-    app:layout_constraintHorizontal_bias="1.0"
-    app:layout_constraintStart_toStartOf="@+id/login_sign_up"
-    app:layout_constraintTop_toBottomOf="@+id/login_sign_up" />
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:text="Play"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager2"
+        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintStart_toStartOf="@+id/viewPager2"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
