--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,8 @@
         <!-- Customize your theme here. -->
         <item name="android:textColorHint">@color/grey</item>
         <item name="android:fontFamily">@font/regular</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
 
     </style>
 
@@ -18,5 +20,10 @@
     <style name="PrimaryButton">
     <item name="android:fontFamily">@font/bold</item>
     <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="permalink">
+        <item name="android:fontFamily">@font/bold</item>
+        <item name="android:textColor">@color/orange</item>
+        <item name="android:textSize">18dp</item>
     </style>
 </resources>
