addd menu interface , added transition

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,7 +8,7 @@ android:background="@android:color/holo_blue_light"
 tools:ignore="ExtraText">
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager2"
+        android:id="@+id/onboardingViewPager"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="144dp"
@@ -44,9 +44,9 @@ tools:ignore="ExtraText">
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:text="Play"
-        app:layout_constraintEnd_toEndOf="@+id/viewPager2"
+        app:layout_constraintEnd_toEndOf="@+id/onboardingViewPager"
         app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="@+id/viewPager2"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager2" />
+        app:layout_constraintStart_toStartOf="@+id/onboardingViewPager"
+        app:layout_constraintTop_toBottomOf="@+id/onboardingViewPager" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
