--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,12 +45,11 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_login_email" />
     <!-- android:text="@{viewmodel.email}" -->
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/login_button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
-        android:background="@drawable/primary_button"
         android:text="@string/login_button_login"
         android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/edit_login_password"
@@ -111,7 +110,7 @@
         app:srcCompat="@drawable/google" />
 
     <ImageView
-        android:id="@+id/facebook_button_registration"
+        android:id="@+id/facebook_button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
