--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="12dp"
         android:text="@string/already_in"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/login_sign_in"
+        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_button_register" />
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="32dp"
         android:autofillHints=""
         android:background="@drawable/generic_input"
@@ -85,7 +85,7 @@
         android:paddingStart="45dp"
         android:paddingLeft="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -145,7 +145,6 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
-        android:background="@drawable/primary_button"
         android:text="@string/register"
         android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/register_password"
