--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
+        android:background="@drawable/primary_button"
         android:text="@string/login_button_login"
         android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/edit_login_password"
