--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -145,6 +145,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
+        android:background="@drawable/primary_button"
         android:text="@string/register"
         android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/register_password"
