--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <style name="PrimaryButton">
     <item name="android:fontFamily">@font/bold</item>
     <item name="android:textColor">@color/white</item>
+        <item name="background">@drawable/primary_button</item>
     </style>
     <style name="permalink">
         <item name="android:fontFamily">@font/bold</item>
