added game mode images

--- a/app/src/main/res/layout/onboarding_view.xml
+++ b/app/src/main/res/layout/onboarding_view.xml
@@ -28,8 +28,8 @@
         android:id="@+id/page_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:dotsColor="@color/colorPurple"
-        app:dotsStrokeColor="@color/colorPurple"
+        app:dotsColor="@color/orange"
+        app:dotsStrokeColor="@color/orange"
         app:dotsCornerRadius="8dp"
         app:dotsSize="@dimen/margin_8"
         app:dotsSpacing="@dimen/margin_8"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_16"
-        android:backgroundTint="@color/colorPurple"
+        android:backgroundTint="@color/orange"
         app:cornerRadius="24dp"
         android:paddingStart="@dimen/padding_30"
         android:paddingEnd="@dimen/padding_30"
