--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,8 +51,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:background="@drawable/primary_button"
+        android:backgroundTint="@color/orange"
         android:text="@string/login_button_login"
         android:theme="@style/PrimaryButton"
+        app:backgroundTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/edit_login_password"
         app:layout_constraintStart_toStartOf="@+id/edit_login_password"
         app:layout_constraintTop_toBottomOf="@+id/edit_login_password" />
