--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -10,30 +10,28 @@
 
 
     <TextView
-        android:id="@+id/login_sign_in2"
+        android:id="@+id/signintologin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginTop="12dp"
         android:text="@string/login"
         android:textColor="@color/orange"
         android:theme="@style/permalink"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
+        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintStart_toStartOf="@+id/register_button_register"
         app:layout_constraintTop_toBottomOf="@+id/register_button_register" />
 
     <TextView
         android:id="@+id/register_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:text="@string/already_in"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/register_button_register"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.356"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_button_register" />
 
@@ -146,10 +144,11 @@
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/primary_button"
+        android:backgroundTint="@color/orange"
         android:text="@string/register"
         android:theme="@style/PrimaryButton"
         app:layout_constraintEnd_toEndOf="@+id/register_password"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/register_password"
         app:layout_constraintTop_toBottomOf="@+id/register_password" />
 
