--- a/app/src/main/res/layout/grid_view_layout_marketdeck.xml
+++ b/app/src/main/res/layout/grid_view_layout_marketdeck.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grid_view_layout_deck"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -36,6 +37,15 @@
             app:layout_constraintEnd_toEndOf="@+id/market_icon_image_view"
             app:layout_constraintStart_toStartOf="@+id/market_icon_image_view"
             app:layout_constraintTop_toBottomOf="@+id/market_icon_image_view" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buy_button_deck"
+            android:layout_width="78dp"
+            android:layout_height="36dp"
+            android:text="Button"
+            app:layout_constraintEnd_toEndOf="@+id/market_title_text_view"
+            app:layout_constraintStart_toStartOf="@+id/market_title_text_view"
+            app:layout_constraintTop_toBottomOf="@+id/market_title_text_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
