--- a/app/src/main/res/layout/grid_view_layout_marketdeckcards.xml
+++ b/app/src/main/res/layout/grid_view_layout_marketdeckcards.xml
@@ -17,11 +17,12 @@
 
         <ImageView
             android:id="@+id/market_icon_image_viewcards"
-            android:layout_width="192dp"
-            android:layout_height="217dp"
+            android:layout_width="191dp"
+            android:layout_height="200dp"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:src="@drawable/letter_a"
+            android:foregroundGravity="center_vertical|clip_horizontal|center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +37,68 @@
             app:layout_constraintEnd_toEndOf="@+id/market_icon_image_viewcards"
             app:layout_constraintStart_toStartOf="@+id/market_icon_image_viewcards"
             app:layout_constraintTop_toBottomOf="@+id/market_icon_image_viewcards" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/textView5"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center|center_horizontal"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/textView6"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center|center_horizontal"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/market_title_text_viewcards"
+            app:layout_constraintStart_toStartOf="@+id/market_title_text_viewcards"
+            app:layout_constraintTop_toBottomOf="@+id/market_title_text_viewcards" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/textView7"
+            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
